# bt-assignment

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml
bts/descriptions/: ergotree.xml
bts/src/: CMakeLists.txt  run_bt.cpp
bts/src/actions/: ask_to_get_closer.cpp
bts/src/conditions/: handout_successful.cpp
interfaces/: CMakeLists.txt
